--- a/index.html
+++ b/index.html
@@ -36,6 +36,24 @@
         <button onclick="changeBackground()">Hintergrund ändern</button>
       </div>
     </section>
+    <section>
+      <h3>Text löschen</h3>
+      <div class="content">
+        <p id="to-delete">Text der gelöscht werden kann...</p>
+      </div>
+      <div class="center">
+        <button id="to-delete" onclick="deleteText ()">Text löschen</button>
+      </div>
+    </section>
+    <section>
+      <h3>counter</h3>
+      <div class="content">
+        <p id="counter">0</p>
+      </div>
+      <div class="center">
+        <button id="counter" onclick="incrementCounter ()">Zählen</button>
+      </div>
+    </section>
   </main>
 
 
